# velox

./: README.md  meson.build
.cache/clangd/index/: Math.h.A6C01864F798A284.idx  _fixes.hpp.6BF9D4234A39C635.idx  _vectorize.hpp.9498FF22003B94E2.idx  assetManager.cpp.409A0704284838B0.idx  assetManager.h.DC04872A94E48321.idx  common.hpp.E063641ECB72F598.idx  compute_common.hpp.47FE0C6E7CD157DA.idx  compute_vector_relational.hpp.AE5891F3E39C34A6.idx  core.h.E853477F90AFA008.idx  entity.h.B3586D6F9E702CFF.idx  exponential.hpp.EC40061C60FFC104.idx  fkyaml_fwd.hpp.5A47BB497F9875E3.idx  func_common.inl.5E1516FBC41FA8AE.idx  func_exponential.inl.E17DD68A9AD7E87D.idx  func_geometric.inl.232F04E34AC119D3.idx  func_integer.inl.2BD2681DAAA27D3F.idx  func_matrix.inl.2671DB5C76E48443.idx  func_packing.inl.D3D85B1A760AAC8D.idx  func_trigonometric.inl.E759E76585ED1341.idx  func_vector_relational.inl.09E1DB1C29609F85.idx  fwd.hpp.BF3349F3AAAB7779.idx  geometric.hpp.32A112AAF0C9B0B5.idx  glm.hpp.E48051BC7AC66E6F.idx  input.h.2F9CF7C465E9D01B.idx  integer.hpp.87DC3606320FE0DF.idx  main.cpp.1460D05664EFE046.idx  main.cpp.532DF9957086534C.idx  main.cpp.615A0B4D6B768E74.idx  main.cpp.89831F44A2EB98EA.idx  mat2x2.hpp.04E6E89FD8697748.idx  mat2x3.hpp.D0E75D34FDDBC9D0.idx  (+122 more)
include/velox/: Math.h  application.h  assetManager.h  engine.h  entity.h  input.h  registry.h  renderSystem.h  renderWindow.h  resourceIDs.h  scene.h  system.h  time.h  util.h
src/: animation.cpp  assetManager.cpp  collisionSystem.cpp  engine.cpp  input.cpp  renderSystem.cpp  renderWindow.cpp  ui.cpp
(+12 files in other folders)
